--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>shop</title>
   </head>
-  <body style="background-color: brown;">
+  <body style="background-color: rgb(3, 17, 16);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
