--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <html>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000" />
+  
+  </html>
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+   
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+   
     <title>shop</title>
   </head>
   <body>
-  <!-- <body style="background-color: rgb(3, 17, 16);"> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <!-- <div id="img" style="width: 250px;border: solid;"> -->
+  <!-- </div>  -->
+  <script>
+var myVar = setInterval(setColor, 300);
+ 
+ function setColor() {
+   var x = document. getElementById("title");
+   x.style.color = x.style.color == "black" ? "pink" : "black"
+ } 
+//  var i = 0;
+// var txt = 'Lorem ipsum dummy text blabla.';
+// var speed = 50;
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+// function typeWriter() {
+//   if (i < txt.length) {
+//     document.getElementById("title").innerHTML += txt.charAt(i);
+//     i++;
+//     setTimeout(typeWriter, speed);
+//   }
+// }
+</script>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+   </script>
   </body>
 </html>
