--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     
     <title>shop</title>
   </head>
-  <body>
+  <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- <div id="img" style="width: 250px;border: solid;"> -->
@@ -29,12 +29,12 @@
 
   <script src="js/persianDatepicker.js"></script>
   <script>
-var myVar = setInterval(setColor, 300);
+// var myVar = setInterval(setColor, 300);
  
- function setColor() {
-   var x = document. getElementById("title");
-   x.style.color = x.style.color == "black" ? "pink" : "black"
- } 
+//  function setColor() {
+//    var x = document. getElementById("title");
+//    x.style.color = x.style.color == "black" ? "pink" : "black"
+//  } 
 //  var i = 0;
 // var txt = 'Lorem ipsum dummy text blabla.';
 // var speed = 50;
