--- a/public/index.html
+++ b/public/index.html
@@ -28,30 +28,21 @@
   <script src="js/jquery-1.10.1.min.js"></script>
 
   <script src="js/persianDatepicker.js"></script>
-  <script>
-// var myVar = setInterval(setColor, 300);
- 
-//  function setColor() {
-//    var x = document. getElementById("title");
-//    x.style.color = x.style.color == "black" ? "pink" : "black"
-//  } 
-//  var i = 0;
-// var txt = 'Lorem ipsum dummy text blabla.';
-// var speed = 50;
 
-// function typeWriter() {
-//   if (i < txt.length) {
-//     document.getElementById("title").innerHTML += txt.charAt(i);
-//     i++;
-//     setTimeout(typeWriter, speed);
-//   }
-// }
+<script>
+// <!-- jalaliDatepicker.startWatch(); -->
+// <!-- persianfont -->
+// <!-- <script type="text/javascript">
+    // var replaceDigits = function() {
+    //     var map = ["&\#1776;","&\#1777;","&\#1778;","&\#1779;","&\#1780;","&\#1781;","&\#1782;","&\#1783;","&\#1784;","&\#1785;"]
+    //     document.body.innerHTML = document.body.innerHTML.replace(/\d(?=[^<>]*(<|$))/g, function($0) { return map[$0]});
+    // }
+    // window.onload = replaceDigits;
+  
+//  -->
 
 
-jalaliDatepicker.startWatch();
 
-
-</script>
 
    </script>
   </body>
