--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <!-- <div id="img" style="width: 250px;border: solid;"> -->
   <!-- </div>  -->
   <script src="js/jquery-1.10.1.min.js"></script>
+  <script type="module" src="/src/product"></script>
 
   <script src="js/persianDatepicker.js"></script>
   <script src="jquery-3.5.1.min.js"></script>
