--- a/public/index.html
+++ b/public/index.html
@@ -6,47 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </html>
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+  <meta
+  name="description"
+  content="Web site created using create-react-app"
+  />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
     <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link type="text/css" rel="stylesheet" href="jalalidatepicker.min.css" />
     <script type="text/javascript" src="jalalidatepicker.min.js"></script>
-    
     <title>shop</title>
   </head>
   <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- <div id="img" style="width: 250px;border: solid;"> -->
-  <!-- </div>  -->
   <script src="js/jquery-1.10.1.min.js"></script>
   <script type="module" src="/src/product"></script>
-
   <script src="js/persianDatepicker.js"></script>
   <script src="jquery-3.5.1.min.js"></script>
 <script>
-// <!-- jalaliDatepicker.startWatch(); -->
-// <!-- persianfont -->
-// <!-- <script type="text/javascript">
-    // var replaceDigits = function() {
-    //     var map = ["&\#1776;","&\#1777;","&\#1778;","&\#1779;","&\#1780;","&\#1781;","&\#1782;","&\#1783;","&\#1784;","&\#1785;"]
-    //     document.body.innerHTML = document.body.innerHTML.replace(/\d(?=[^<>]*(<|$))/g, function($0) { return map[$0]});
-    // }
-    // window.onload = replaceDigits;
-  
-//  -->
-
-
 var localToday = new Date().toLocaleDateString('fa-IR');
 console.log(localToday);
-
    </script>
   </body>
 </html>
