--- a/public/index.html
+++ b/public/index.html
@@ -7,29 +7,44 @@
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
   </html>
   <meta
   name="description"
   content="Web site created using create-react-app"
   />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
-    <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <!-- <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css"> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link type="text/css" rel="stylesheet" href="jalalidatepicker.min.css" />
+    <link href="/dist/output.css" rel="stylesheet">
     <script type="text/javascript" src="jalalidatepicker.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>shop</title>
   </head>
   <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+   
   <script src="js/jquery-1.10.1.min.js"></script>
   <script type="module" src="/src/product"></script>
   <script src="js/persianDatepicker.js"></script>
   <script src="jquery-3.5.1.min.js"></script>
+   
 <script>
 var localToday = new Date().toLocaleDateString('fa-IR');
 console.log(localToday);
+function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
    </script>
+
   </body>
 </html>
